--- a/public/observatory/observatory-content.html
+++ b/public/observatory/observatory-content.html
@@ -121,12 +121,12 @@
             <div class="grid">
                 <div class="card">
                     <div class="card-icon" style="color: #3b82f6;">🌌</div>
-                    <h3 class="card-title">Cosmic Explorer</h3>
+                    <h3 class="card-title">Cosmic Scale Explorer</h3>
                     <p class="card-text">
                         Navigate through scales of cosmic consciousness from quantum foam to galactic clusters.
                     </p>
-                    <a href="/observatory/cosmic-explorer" class="btn">Launch</a>
-                    <a href="../content/multimedia/cosmic-scale-explorer-fixed.html" class="btn btn-outline">View Source</a>
+                    <a href="../content/multimedia/cosmic-scale-explorer-fixed.html" class="btn">Launch</a>
+                    <a href="../content/multimedia/cosmic_scale_consciousness_explorer.html" class="btn btn-outline">Alt Version</a>
                 </div>
 
                 <div class="card">
@@ -136,7 +136,7 @@
                         Interactive timeline exploring the development of faster-than-light travel concepts.
                     </p>
                     <a href="/observatory/warp-drive-timeline" class="btn" style="background: #8b5cf6;">Launch</a>
-                    <a href="../content/multimedia/warp-drive-timeline-code.js" class="btn btn-outline" style="border-color: #8b5cf6; color: #8b5cf6;">View Code</a>
+                    <a href="../content/multimedia/enhanced-warp-timeline.html" class="btn btn-outline" style="border-color: #8b5cf6; color: #8b5cf6;">Enhanced Version</a>
                 </div>
 
                 <div class="card">
@@ -146,7 +146,6 @@
                         Explore the quantum substrate of reality through interactive particle visualization.
                     </p>
                     <a href="/observatory/quantum-foam" class="btn" style="background: #14b8a6;">Launch</a>
-                    <a href="../content/multimedia/quantum-foam-visualizer.html" class="btn btn-outline" style="border-color: #14b8a6; color: #14b8a6;">View Source</a>
                 </div>
 
                 <div class="card">
@@ -156,7 +155,7 @@
                         Enhanced cosmic harmonic visualizations for consciousness frequency analysis.
                     </p>
                     <a href="/observatory/LivingCosmicPrimer" class="btn" style="background: #10b981;">Launch</a>
-                    <a href="../content/multimedia/cosmic-harmonic-enhanced.html" class="btn btn-outline" style="border-color: #10b981; color: #10b981;">View Source</a>
+                    <a href="../content/multimedia/cosmic-harmonic-enhanced.html" class="btn btn-outline" style="border-color: #10b981; color: #10b981;">Direct Link</a>
                 </div>
 
                 <div class="card">
@@ -166,7 +165,7 @@
                         Interactive visualization simulating the alcubierre warp drive mechanics.
                     </p>
                     <a href="/observatory/alcubierre-warp-drive-simulator" class="btn" style="background: #f59e0b;">Launch</a>
-                    <a href="../content/multimedia/alcubierre-warp-drive-simulator.html" class="btn btn-outline" style="border-color: #f59e0b; color: #f59e0b;">View Source</a>
+                    <a href="../content/multimedia/alcubierre-warp-drive-simulator.html" class="btn btn-outline" style="border-color: #f59e0b; color: #f59e0b;">Direct Link</a>
                 </div>
 
                 <div class="card">
@@ -176,7 +175,7 @@
                         Navigate through metamonastic layers of glyphic exploration and consciousness mapping territories.
                     </p>
                     <a href="/observatory/metamonastic-glyphic_quest" class="btn" style="background: #ec4899;">Launch</a>
-                    <a href="../content/multimedia/qwenglyphs" class="btn btn-outline" style="border-color: #ec4899; color: #ec4899;">View Glyphs</a>
+                    <a href="../content/multimedia/qwenglyphs/Qwen_html.html" class="btn btn-outline" style="border-color: #ec4899; color: #ec4899;">View Glyphs</a>
                 </div>
             </div>
         </div>
