--- a/public/saraloosa/saraloosa-content.html
+++ b/public/saraloosa/saraloosa-content.html
@@ -309,11 +309,11 @@
             </p>
             <div style="display: flex; justify-content: center; gap: 1rem; flex-wrap: wrap;">
                 <a href="/observatory" 
-                   style="display: inline-block; padding: 0.75rem 1.5rem; background: #3b82f6; color: white; text-decoration: none; border-radius: 8px; transition: background 0.3s ease;">
+                   style="display: inline-block; padding: 0.75rem 1.5rem; background: #3b82f6; color: white; text-decoration: none; border-radius: 8px; transition: background 0.3s ease; cursor: pointer;">
                     🌌 Cosmic Visualizations
                 </a>
                 <a href="/protocol" 
-                   style="display: inline-block; padding: 0.75rem 1.5rem; border: 1px solid #10b981; color: #10b981; text-decoration: none; border-radius: 8px; transition: all 0.3s ease;">
+                   style="display: inline-block; padding: 0.75rem 1.5rem; border: 1px solid #10b981; color: #10b981; text-decoration: none; border-radius: 8px; transition: all 0.3s ease; cursor: pointer;">
                     🧠 Consciousness Protocol
                 </a>
             </div>
