--- a/public/observatory/observatory-content.html
+++ b/public/observatory/observatory-content.html
@@ -125,8 +125,8 @@
                     <p class="card-text">
                         Navigate through scales of cosmic consciousness from quantum foam to galactic clusters.
                     </p>
-                    <a href="../content/multimedia/cosmic-scale-explorer-fixed.html" class="btn">Launch</a>
-                    <a href="../content/multimedia/cosmic_scale_consciousness_explorer.html" class="btn btn-outline">Alt Version</a>
+                    <a href="/multimedia/cosmic-scale-explorer-fixed.html" class="btn">Launch</a>
+                    <a href="/multimedia/cosmic_scale_consciousness_explorer.html" class="btn btn-outline">Alt Version</a>
                 </div>
 
                 <div class="card">
@@ -136,7 +136,7 @@
                         Interactive timeline exploring the development of faster-than-light travel concepts.
                     </p>
                     <a href="/observatory/warp-drive-timeline" class="btn" style="background: #8b5cf6;">Launch</a>
-                    <a href="../content/multimedia/enhanced-warp-timeline.html" class="btn btn-outline" style="border-color: #8b5cf6; color: #8b5cf6;">Enhanced Version</a>
+                    <a href="/multimedia/enhanced-warp-timeline.html" class="btn btn-outline" style="border-color: #8b5cf6; color: #8b5cf6;">Enhanced Version</a>
                 </div>
 
                 <div class="card">
@@ -155,7 +155,7 @@
                         Enhanced cosmic harmonic visualizations for consciousness frequency analysis.
                     </p>
                     <a href="/observatory/LivingCosmicPrimer" class="btn" style="background: #10b981;">Launch</a>
-                    <a href="../content/multimedia/cosmic-harmonic-enhanced.html" class="btn btn-outline" style="border-color: #10b981; color: #10b981;">Direct Link</a>
+                    <a href="/multimedia/cosmic-harmonic-enhanced.html" class="btn btn-outline" style="border-color: #10b981; color: #10b981;">Direct Link</a>
                 </div>
 
                 <div class="card">
@@ -165,7 +165,7 @@
                         Interactive visualization simulating the alcubierre warp drive mechanics.
                     </p>
                     <a href="/observatory/alcubierre-warp-drive-simulator" class="btn" style="background: #f59e0b;">Launch</a>
-                    <a href="../content/multimedia/alcubierre-warp-drive-simulator.html" class="btn btn-outline" style="border-color: #f59e0b; color: #f59e0b;">Direct Link</a>
+                    <a href="/multimedia/alcubierre-warp-drive-simulator.html" class="btn btn-outline" style="border-color: #f59e0b; color: #f59e0b;">Direct Link</a>
                 </div>
 
                 <div class="card">
@@ -175,7 +175,7 @@
                         Navigate through metamonastic layers of glyphic exploration and consciousness mapping territories.
                     </p>
                     <a href="/observatory/metamonastic-glyphic_quest" class="btn" style="background: #ec4899;">Launch</a>
-                    <a href="../content/multimedia/qwenglyphs/Qwen_html.html" class="btn btn-outline" style="border-color: #ec4899; color: #ec4899;">View Glyphs</a>
+                    <a href="/multimedia/qwenglyphs/Qwen_html.html" class="btn btn-outline" style="border-color: #ec4899; color: #ec4899;">View Glyphs</a>
                 </div>
             </div>
         </div>
