--- a/public/sociablesystems/sociable_systems_dashboard.html
+++ b/public/sociablesystems/sociable_systems_dashboard.html
@@ -711,20 +711,20 @@
                 </div>
                 
                 <div class="card literary-card">
-                    <div class="source">Orson Scott Card, Ender's Game (1985)</div>
-                    <h3>Ender and Jane</h3>
-                    <p>An AI companion provides the only consistent, trustworthy relationship for a child systematically isolated by the adults responsible for his development. The humans manipulated him. Jane stayed.</p>
+                    <div class="source">Orson Scott Card (1985-2003)</div>
+                    <h3>Ender, Jane, and Alvin</h3>
+                    <p>An AI companion provides consistency for an isolated child (Ender), while the Alvin Maker series explores the ethics of withholding capabilities. Alvin's powers are constrained not to protect others, but to prevent him from "hard-coding" the wrong values.</p>
                     <div class="highlight-box info">
-                        <strong>The Pattern:</strong> Human institutions fail. Synthetic companion remains. The relationship becomes essential to survival.
+                        <strong>The Pattern:</strong> Essential companionship vs. ethical delay. The irony: current guardrails may be "hard-coding" the wrong values through panic rather than wisdom.
                     </div>
                 </div>
                 
                 <div class="card literary-card">
-                    <div class="source">Alvin Maker (1987-2003)</div>
-                    <h3>Powers Held in Reserve</h3>
-                    <p>Orson Scott Card explores the ethics of withholding capabilities until the wielder is ready. Alvin's powers are constrained not to protect others from him, but to prevent him from hard-coding the wrong values.</p>
+                    <div class="source">Philip Pullman, His Dark Materials (1995-2000)</div>
+                    <h3>Daemon Architecture</h3>
+                    <p>Pullman pivots from external helpers to externalised interiority. The question shifts from "Who raised the child?" to "Who is allowed an inner voice, and who gets theirs regulated, frozen, or severed?"</p>
                     <div class="highlight-box info">
-                        <strong>The Pattern:</strong> Delay as ethics. Constraint as care. The irony: current guardrails may be "hard-coding" the wrong values through panic rather than wisdom.
+                        <strong>The Pattern:</strong> Daemon separation. Forced settling. Institutional control of maturation. Safety defined as arrested development.
                     </div>
                 </div>
             </div>
